# entrenamiento_federado

./: .gitignore  README.md  TheModel.py  global.ipynb  local_training.ipynb  main.py  pyproject.toml
models/: global_model_federado.keras  lmodel_2.keras  lmodel_4.keras
