[project]
name = "federado"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "tensorflow",
    "ipykernel",
    "matplotlib>=3.10.1",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "h5py>=3.13.0",
]
